# Portfolio_App

./: .env  .gitignore  README.md  app.py  flood_agentic_system.py  flood_report_Faisalabad_District_1758730646.json  flood_report_Islamabad_Capital_Territory_1758730462.json  flood_report_Lahore_District_1758729756.json  flood_report_Lahore_District_1759028309.json  flood_report_Peshawar_District_1758733575.json  flood_report_Quetta_District_1758733303.json  pyproject.toml  soil_report_Lahore_District_1758733117.json
app/: main.py  orchestrator.py
app/agents/: agentic_orchestrator.py  coordination_agent.py  data_agent.py  evacuation_agent.py  evacuation_data.db  evacuation_route_agent.py  flood_data.db  flood_data_visualizer.py  flood_report_Islamabad_Capital_Territory_1758981604.json  flood_report_Islamabad_Capital_Territory_1758983349.json  flood_report_Lahore_District_1758982074.json  flood_report_Lahore_District_1758983636.json  flood_report_Lahore_District_1758984027.json  flood_report_Lahore_District_1758984079.json  flood_report_Lahore_District_1758984365.json  flood_report_Lahore_District_1758984532.json  flood_report_Lahore_District_1758986719.json  hydro_met.py  pakistan_relief_camps.json  prediction_agent.py  reconstruction.py  relief_source_agent.py
backend/: main.py  portfolio.db  pyproject.toml  requirements.txt
flood-frontend/: index.html  package.json  tailwind.config.js
flood-frontend/public/: scene.splinecode
flood-frontend/src/: App.jsx  index.css
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
(+17 files in other folders)
